--- a/src/components/Header/header.scss
+++ b/src/components/Header/header.scss
@@ -1,8 +1,11 @@
 @import "../../globalStyles/breakPoints.scss";
-header {
+.header {
   background-color: black;
   width: 100%;
-  .header {
+  position: sticky;
+  top: 0;
+  z-index: 100;
+  .header-container {
     max-width: 1280px;
     width: 100%;
     display: flex;
@@ -42,7 +45,14 @@ header {
         border-radius: 15px;
         width: 200px;
         box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
-        z-index: 10;
+        z-index: 20;
+        a {
+          color: #ffffffb9;
+          text-decoration: none;
+          &:hover {
+            color: #fff;
+          }
+        }
       }
 
       .dropdown-menu-item {
