--- a/src/components/SearchInput/searchInput.scss
+++ b/src/components/SearchInput/searchInput.scss
@@ -29,6 +29,7 @@
 }
 
 .results-list {
+  padding: 20px;
   position: absolute;
   top: 130%;
   left: 0;
@@ -40,6 +41,12 @@
   overflow-y: auto;
   z-index: 10;
   border-radius: 10px;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  @include mobile {
+    padding: 10px
+  }
 }
 
 .result-item {
